@@ -2,9 +2,8 @@ package seedu.address.storage;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -14,6 +13,7 @@ import seedu.address.model.AddressBook;
 import seedu.address.model.consultation.Date;
 import seedu.address.model.consultation.Time;
 import seedu.address.model.lesson.Lesson;
+import seedu.address.model.lesson.StudentLessonInfo;
 import seedu.address.model.student.Student;
 import seedu.address.testutil.StudentBuilder;
 
@@ -21,39 +21,38 @@ public class JsonAdaptedLessonTest {
 
     private static final String VALID_DATE = "2024-10-21";
     private static final String VALID_TIME = "10:00";
-    private static final List<JsonAdaptedStudent> VALID_STUDENTS = Collections.singletonList(
-            new JsonAdaptedStudent(new StudentBuilder().withName("Alice Pauline").build()));
-    private static final List<Boolean> VALID_MAPS = List.of(false);
-    private static final List<Pair<JsonAdaptedStudent, Boolean>> VALID_MAP = Collections.singletonList(new Pair<>(
-            new JsonAdaptedStudent(new StudentBuilder().withName("Alice Pauline").build()), false));
+    private static final JsonAdaptedStudent VALID_STUDENT = new JsonAdaptedStudent(
+            new StudentBuilder().withName("Alice Pauline").build());
+    private static final List<JsonAdaptedStudentLessonInfo> VALID_STUDENT_INFO = List.of(
+            new JsonAdaptedStudentLessonInfo(VALID_STUDENT, true, 1));
 
     private static final String INVALID_DATE = "invalid-date";
     private static final String INVALID_TIME = "invalid-time";
 
     @Test
     public void toModelType_nullDate_throwsIllegalValueException() {
-        JsonAdaptedLesson lesson = new JsonAdaptedLesson(null, VALID_TIME, VALID_STUDENTS, VALID_MAP);
+        JsonAdaptedLesson lesson = new JsonAdaptedLesson(null, VALID_TIME, VALID_STUDENT_INFO);
         assertThrows(IllegalValueException.class, () -> lesson.toModelType(new AddressBook()),
                 String.format(JsonAdaptedLesson.MISSING_FIELD_MESSAGE_FORMAT, "Date"));
     }
 
     @Test
     public void toModelType_invalidDateFormat_throwsIllegalValueException() {
-        JsonAdaptedLesson lesson = new JsonAdaptedLesson(INVALID_DATE, VALID_TIME, VALID_STUDENTS, VALID_MAP);
+        JsonAdaptedLesson lesson = new JsonAdaptedLesson(INVALID_DATE, VALID_TIME, VALID_STUDENT_INFO);
         assertThrows(IllegalValueException.class, () -> lesson.toModelType(new AddressBook()),
                 Date.MESSAGE_CONSTRAINTS);
     }
 
     @Test
     public void toModelType_nullTime_throwsIllegalValueException() {
-        JsonAdaptedLesson lesson = new JsonAdaptedLesson(VALID_DATE, null, VALID_STUDENTS, VALID_MAP);
+        JsonAdaptedLesson lesson = new JsonAdaptedLesson(VALID_DATE, null, VALID_STUDENT_INFO);
         assertThrows(IllegalValueException.class, () -> lesson.toModelType(new AddressBook()),
                 String.format(JsonAdaptedLesson.MISSING_FIELD_MESSAGE_FORMAT, "Time"));
     }
 
     @Test
     public void toModelType_invalidTimeFormat_throwsIllegalValueException() {
-        JsonAdaptedLesson lesson = new JsonAdaptedLesson(VALID_DATE, INVALID_TIME, VALID_STUDENTS, VALID_MAP);
+        JsonAdaptedLesson lesson = new JsonAdaptedLesson(VALID_DATE, INVALID_TIME, VALID_STUDENT_INFO);
         assertThrows(IllegalValueException.class, () -> lesson.toModelType(new AddressBook()),
                 Time.MESSAGE_CONSTRAINTS);
     }
@@ -66,12 +65,13 @@ public class JsonAdaptedLessonTest {
         addressBook.addStudent(student);
 
         JsonAdaptedStudent jsonStudent = new JsonAdaptedStudent(student);
+
         JsonAdaptedLesson lesson = new JsonAdaptedLesson(
-                VALID_DATE, VALID_TIME, Arrays.asList(jsonStudent), List.of(new Pair<>(jsonStudent, false)));
+                VALID_DATE, VALID_TIME, VALID_STUDENT_INFO);
 
         Lesson modelLesson = lesson.toModelType(addressBook);
         Lesson expectedLesson = new Lesson(new Date(VALID_DATE), new Time(VALID_TIME),
-                Arrays.asList(student), Collections.singletonMap(student, false));
+                List.of(new StudentLessonInfo(student, true, 1)));
 
         assertEquals(expectedLesson, modelLesson);
     }
@@ -81,15 +81,15 @@ public class JsonAdaptedLessonTest {
         // Create a Lesson instance
         Student student = new StudentBuilder().withName("Alice Pauline").build();
         Lesson lesson = new Lesson(new Date(VALID_DATE), new Time(VALID_TIME),
-                Arrays.asList(student), Collections.singletonMap(student, false));
+                List.of(new StudentLessonInfo(student, false, 0)));
 
         // Convert the Lesson to JsonAdaptedLesson
         JsonAdaptedLesson jsonAdaptedLesson = new JsonAdaptedLesson(lesson);
+        JsonAdaptedLesson expected = new JsonAdaptedLesson(VALID_DATE, VALID_TIME,
+                List.of(new JsonAdaptedStudentLessonInfo(new JsonAdaptedStudent(student),
+                        false, 0)));
 
         // Verify the converted values
-        assertEquals(VALID_DATE, jsonAdaptedLesson.getDate());
-        assertEquals(VALID_TIME, jsonAdaptedLesson.getTime());
-        assertEquals(1, jsonAdaptedLesson.getStudents().size());
-        assertEquals(student.getName().fullName, jsonAdaptedLesson.getStudents().get(0).getName());
+        assertTrue(jsonAdaptedLesson.equals(expected));
     }
 }
